# kyro

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  KORE_PLAN.md  PLAN.md  README.md  SESSION.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
.github/: copilot-instructions.md
.konjo/scripts/: dry_check.py  konjo_review.py
api/: main.py  test_api.py
dashboard/: package.json
demo/: agent.html  agent.py  demo.py  hyde.html  hyde.py  index.html  observatory.html  pipeline.html  pipeline.py  rewrite.html  rewriting.py  sample_queries.json  security.html  security.py  server.py
docker/: Dockerfile  docker-compose.yml
docs/: configuration.md  index.md
evals/benchmarks/: vectro_compression.json
evals/corpus/: README.md  eval_questions.json
helm/kyro/: Chart.yaml
konjoai/: __init__.py  config.py  telemetry.py
konjoai/adapters/: __init__.py  base.py
konjoai/agent/: react.py
konjoai/api/: app.py  schemas.py
konjoai/audit/: __init__.py  logger.py  models.py
konjoai/auth/: __init__.py  api_key.py  brute_force.py  deps.py  jwt_auth.py  rate_limiter.py  tenant.py
konjoai/cache/: __init__.py  analytics.py  async_cache.py  federation.py  multiturn.py  poisoning.py  redis_cache.py  rewriter.py  semantic_cache.py  streaming.py  suspicious.py  threshold.py  tracing.py
konjoai/cli/: main.py
konjoai/embed/: encoder.py  vectro_bridge.py
konjoai/eval/: ragas_eval.py
konjoai/feedback/: __init__.py  models.py  store.py
konjoai/generate/: generator.py
konjoai/ingest/: adaptive_chunker.py  chunkers.py  dedup.py  loaders.py  rag_bridge.py
konjoai/mcp/: __init__.py  __main__.py  server.py
konjoai/retrieve/: auto_router.py  crag.py  decomposition.py  dense.py  graph_rag.py  hybrid.py  hyde.py  late_interaction.py  reranker.py  router.py  self_rag.py  sparse.py  vectro_retriever.py
konjoai/sdk/: __init__.py  client.py  exceptions.py  models.py
konjoai/services/: __init__.py  cost_attribution.py  vectro_pipeline_service.py
konjoai/store/: qdrant.py
ragos/: __init__.py  config.py  telemetry.py
ragos/api/: app.py  schemas.py
ragos/cli/: __init__.py  main.py
ragos/embed/: __init__.py  encoder.py  vectro_bridge.py
ragos/eval/: __init__.py  ragas_eval.py
ragos/generate/: generator.py
ragos/ingest/: __init__.py  chunkers.py  loaders.py
ragos/retrieve/: __init__.py  dense.py  hybrid.py  hyde.py  reranker.py  router.py  sparse.py
ragos/store/: qdrant.py
scripts/: ablation_chunking.py
tests/integration/: test_pipeline.py
tests/unit/: _route_harness.py  test_adapters.py  test_adaptive_chunker.py  test_agent_route.py  test_agentic.py  test_api_key_auth.py  test_async_cache.py  test_async_pipeline.py  test_audit.py  test_auth.py  test_auto_router.py  test_brute_force.py  test_cache_sprint27.py  test_cache_sprint28.py  test_cache_sprint29.py  test_cache_tracing.py  test_chunkers.py  test_cost_attribution.py  test_crag.py  test_decomposition.py  test_dedup.py  test_demo_agent.py  test_demo_hyde.py  test_demo_metrics.py  test_demo_pipeline.py  test_demo_rewrite.py  test_demo_security.py  test_encoder.py  test_feedback.py  test_graph_rag.py  test_helm.py  test_hyde.py  test_late_chunker.py  test_late_interaction.py  (+25 more)
(+22 files in other folders)
